// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar Component Snapshot testing hauria de coincidir amb el snapshot amb searchQuery amb text 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "transparent",
        "padding": 8,
      },
      {
        "paddingTop": 8,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderRadius": 18,
          "elevation": 2,
          "flex": 1,
          "flexDirection": "row",
          "height": 44,
          "marginRight": 8,
          "paddingHorizontal": 16,
          "shadowColor": "rgba(0, 0, 0, 0.05)",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
        }
      }
    >
      <PlusIcon
        color="#6B7280"
        height={20}
        width={20}
      />
      <TextInput
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        onChangeText={[MockFunction]}
        onSubmitEditing={[Function]}
        placeholder="Cerca refugis..."
        placeholderTextColor="#6B7280"
        style={
          {
            "color": "#616774ff",
            "flex": 1,
            "fontFamily": "Arimo",
            "fontSize": 16,
            "height": 44,
            "marginLeft": 8,
          }
        }
        value="Refugi"
      />
      <View
        accessibilityLabel="Esborrar"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderRadius": 14,
            "height": 28,
            "justifyContent": "center",
            "marginLeft": 8,
            "opacity": 1,
            "width": 28,
          }
        }
      >
        <Text
          style={
            {
              "color": "#6B7280",
              "fontSize": 16,
              "lineHeight": 16,
            }
          }
        >
          ✕
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderRadius": 18,
          "elevation": 2,
          "height": 44,
          "justifyContent": "center",
          "opacity": 1,
          "shadowColor": "rgba(0, 0, 0, 0.05)",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 5,
          "shadowRadius": 4,
          "width": 44,
        }
      }
    >
      <PlusIcon
        color="#6B7280"
        height={18}
        width={18}
      />
    </View>
  </View>
</View>
`;

exports[`SearchBar Component Snapshot testing hauria de coincidir amb el snapshot amb searchQuery buit 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "transparent",
        "padding": 8,
      },
      {
        "paddingTop": 8,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderRadius": 18,
          "elevation": 2,
          "flex": 1,
          "flexDirection": "row",
          "height": 44,
          "marginRight": 8,
          "paddingHorizontal": 16,
          "shadowColor": "rgba(0, 0, 0, 0.05)",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
        }
      }
    >
      <PlusIcon
        color="#6B7280"
        height={20}
        width={20}
      />
      <TextInput
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        onChangeText={[MockFunction]}
        onSubmitEditing={[Function]}
        placeholder="Cerca refugis..."
        placeholderTextColor="#6B7280"
        style={
          {
            "color": "#616774ff",
            "flex": 1,
            "fontFamily": "Arimo",
            "fontSize": 16,
            "height": 44,
            "marginLeft": 8,
          }
        }
        value=""
      />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderRadius": 18,
          "elevation": 2,
          "height": 44,
          "justifyContent": "center",
          "opacity": 1,
          "shadowColor": "rgba(0, 0, 0, 0.05)",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 5,
          "shadowRadius": 4,
          "width": 44,
        }
      }
    >
      <PlusIcon
        color="#6B7280"
        height={18}
        width={18}
      />
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "white",
        "borderRadius": 14,
        "elevation": 4,
        "flexDirection": "row",
        "gap": 8,
        "height": 32,
        "justifyContent": "flex-start",
        "marginBottom": 16,
        "marginLeft": 10,
        "marginTop": -8,
        "opacity": 1,
        "paddingHorizontal": 12,
        "shadowColor": "rgba(0, 0, 0, 0.10)",
        "shadowOffset": {
          "height": 4,
          "width": 4,
        },
        "shadowOpacity": 1,
        "shadowRadius": 6,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderColor": "#99A1AF",
          "borderRadius": 7,
          "borderWidth": 1.5,
          "height": 20,
          "justifyContent": "center",
          "marginLeft": -4,
          "position": "relative",
          "width": 20,
        }
      }
    >
      <Text
        style={
          {
            "color": "#99A1AF",
            "fontFamily": "Arimo",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
            "minWidth": 16,
            "position": "absolute",
            "textAlign": "center",
          }
        }
      >
        +
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#99A1AF",
          "fontFamily": "Arimo",
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 20,
        }
      }
    >
      Afegir refugi
    </Text>
  </View>
</View>
`;

exports[`SearchBar Component Snapshot testing hauria de coincidir amb el snapshot amb suggeriments 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "transparent",
        "padding": 8,
      },
      {
        "paddingTop": 8,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderRadius": 18,
          "elevation": 2,
          "flex": 1,
          "flexDirection": "row",
          "height": 44,
          "marginRight": 8,
          "paddingHorizontal": 16,
          "shadowColor": "rgba(0, 0, 0, 0.05)",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
        }
      }
    >
      <PlusIcon
        color="#6B7280"
        height={20}
        width={20}
      />
      <TextInput
        autoCapitalize="none"
        autoCorrect={false}
        blurOnSubmit={true}
        onChangeText={[MockFunction]}
        onSubmitEditing={[Function]}
        placeholder="Cerca refugis..."
        placeholderTextColor="#6B7280"
        style={
          {
            "color": "#616774ff",
            "flex": 1,
            "fontFamily": "Arimo",
            "fontSize": 16,
            "height": 44,
            "marginLeft": 8,
          }
        }
        value=""
      />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderRadius": 18,
          "elevation": 2,
          "height": 44,
          "justifyContent": "center",
          "opacity": 1,
          "shadowColor": "rgba(0, 0, 0, 0.05)",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 5,
          "shadowRadius": 4,
          "width": 44,
        }
      }
    >
      <PlusIcon
        color="#6B7280"
        height={18}
        width={18}
      />
    </View>
  </View>
  <View
    style={
      {
        "backgroundColor": "white",
        "borderRadius": 12,
        "elevation": 2,
        "marginBottom": 8,
        "marginTop": -8,
        "maxHeight": 240,
        "paddingVertical": 4,
        "shadowColor": "rgba(0,0,0,0.08)",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 4,
      }
    }
  >
    <RCTScrollView
      nestedScrollEnabled={true}
      showsVerticalScrollIndicator={false}
      style={
        {
          "maxHeight": 240,
        }
      }
    >
      <View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "borderBottomColor": "#F0F0F0",
              "borderBottomWidth": 1,
              "opacity": 1,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#616774",
                "fontSize": 15,
              }
            }
          >
            Refugi 1
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "borderBottomColor": "#F0F0F0",
              "borderBottomWidth": 1,
              "opacity": 1,
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#616774",
                "fontSize": 15,
              }
            }
          >
            Refugi 2
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "white",
        "borderRadius": 14,
        "elevation": 4,
        "flexDirection": "row",
        "gap": 8,
        "height": 32,
        "justifyContent": "flex-start",
        "marginBottom": 16,
        "marginLeft": 10,
        "marginTop": -8,
        "opacity": 1,
        "paddingHorizontal": 12,
        "shadowColor": "rgba(0, 0, 0, 0.10)",
        "shadowOffset": {
          "height": 4,
          "width": 4,
        },
        "shadowOpacity": 1,
        "shadowRadius": 6,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderColor": "#99A1AF",
          "borderRadius": 7,
          "borderWidth": 1.5,
          "height": 20,
          "justifyContent": "center",
          "marginLeft": -4,
          "position": "relative",
          "width": 20,
        }
      }
    >
      <Text
        style={
          {
            "color": "#99A1AF",
            "fontFamily": "Arimo",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
            "minWidth": 16,
            "position": "absolute",
            "textAlign": "center",
          }
        }
      >
        +
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#99A1AF",
          "fontFamily": "Arimo",
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 20,
        }
      }
    >
      Afegir refugi
    </Text>
  </View>
</View>
`;
